--- a/zaidimai/balioneliai/index.html
+++ b/zaidimai/balioneliai/index.html
@@ -130,7 +130,7 @@
     </style>
 </head>
 <body>
-    <a href="../zaidimai/" class="back-btn">← Žaidimai</a>
+    <a href="../" class="back-btn">← Žaidimai</a>
 
     <div class="hud">
         <div class="hud-item">🎈 <span class="val" id="balloonCount">0</span></div>
